--- a/index.html
+++ b/index.html
@@ -5,119 +5,84 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>digNAH+ Login</title>
+  <script src="config.js"></script>
   <style>
-    /* Nederlandse opmerking: basis kleuren overgenomen uit dignah.html */
-    :root {
-      --bg: #0d0f12;
-      --card: #1a1d23;
-      --accent: #4da3ff;
-      --text: #e0e6ed;
-      --text-muted: #9aa3b2;
-    }
-
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
     }
-
     .container {
-      background: var(--card);
+      background-color: white;
       padding: 2rem;
-      border-radius: 12px;
-      width: 100%;
-      max-width: 420px;
-      box-shadow: 0 0 25px rgba(0,0,0,0.35);
-    }
-
-    h1 {
-      margin-top: 0;
-      margin-bottom: 1rem;
-      font-weight: 600;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      max-width: 400px;
       text-align: center;
     }
-
-    p {
-      color: var(--text-muted);
-      font-size: 0.9rem;
-      text-align: center;
-    }
-
     input[type="email"] {
       width: 100%;
-      padding: 0.75rem;
-      border-radius: 8px;
-      border: 1px solid #333;
-      background: #111317;
-      color: var(--text);
+      padding: 0.5rem;
       margin-top: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
     }
-
     button {
-      width: 100%;
-      padding: 0.8rem;
       margin-top: 1rem;
-      background: var(--accent);
-      color: #000;
+      padding: 0.5rem 1rem;
       border: none;
-      border-radius: 8px;
-      font-weight: bold;
+      background-color: #009578;
+      color: white;
+      border-radius: 5px;
       cursor: pointer;
-      font-size: 1rem;
     }
-
-    button:hover {
-      background: #6ab4ff;
+    p.info {
+      font-size: 0.9rem;
+      color: #555;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="info-box" style="margin-bottom: 1.2rem; padding: 1rem; background: #111317; border-radius: 8px; color: var(--text-muted); font-size: 0.9rem;">
-      <!-- Nederlandse opmerking: informatievak met uitleg doel pagina en loginreden -->
-      Deze pagina geeft toegang tot de beveiligde digNAH+ omgeving, bedoeld voor professionele ondersteuning bij het opstellen van EVC‑bewijslast binnen Social Work. Om zorgvuldige omgang met gegevens en toegangscontrole te waarborgen is inloggen via e‑mail noodzakelijk. Indien u behoort tot de gebruikersgroep maar geen toegang kunt verkrijgen, neemt u contact op met de systeembeheerder voor het toevoegen van uw e‑mailadres.
-    </div>
-    <h1>digNAH+</h1>
-    <p>Voer je zakelijke e-mailadres in om toegang te verkrijgen.</p>
-
-    <!-- Nederlandse opmerking: e-mailveld voor login-verificatie -->
-    <input id="email" type="email" placeholder="you@example.com" />
-
-    <!-- Nederlandse opmerking: knop stuurt verzoek naar backend om code te verzenden -->
-    <button onclick="sendCode()">Verstuur login code</button>
-
-    <p id="status"></p>
+    <h2>Toegang tot digNAH+</h2>
+    <p class="info">
+      Deze omgeving is uitsluitend bedoeld voor bevoegde gebruikers. Voer je e-mailadres in om toegang aan te vragen. Je ontvangt een code per e-mail. Heb je geen toegang maar denk je die wel nodig te hebben, neem dan contact op met de systeembeheerder. Voor het toevoegen van een nieuw e-mailadres is contact noodzakelijk.
+    </p>
+    <input id="email" placeholder="you@example.com" type="email" />
+    <button onclick="requestCode()">Verzend code</button>
+    <p id="feedback"></p>
   </div>
 
   <script>
-    // Nederlandse opmerking: verstuurt e-mailadres naar backend voor code-generatie
-    async function sendCode() {
-      const email = document.getElementById('email').value;
-      const status = document.getElementById('status');
-      status.textContent = 'Verwerken...';
-
+    async function requestCode() {
+      const email = document.getElementById("email").value;
+      const feedback = document.getElementById("feedback");
+      feedback.textContent = "Verzenden...";
       try {
-        const res = await fetch('/send_code', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
+        const response = await fetch(`${window.API_URL}/send_code`, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
           body: JSON.stringify({ email })
         });
-        const data = await res.json();
-        if (data.status === 'sent') {
-          status.textContent = 'Code verzonden. Controleer je e-mail.';
+
+        if (response.ok) {
+          window.location.href = `verify.html?email=${encodeURIComponent(email)}`;
         } else {
-          status.textContent = data.error || 'Er ging iets mis.';
+          const data = await response.json();
+          feedback.textContent = data.detail || "Verzenden mislukt.";
         }
-      } catch (e) {
-        status.textContent = 'Serverfout.';
+      } catch (err) {
+        feedback.textContent = "Fout bij verbinden met server.";
       }
     }
   </script>
 </body>
 </html>
-<!-- index.html -->
